--- a/ReOrganizedJune10/Assignments/Assignment-Two.Rmd
+++ b/ReOrganizedJune10/Assignments/Assignment-Two.Rmd
@@ -12,19 +12,31 @@ output:
 ```{r child="/Users/kaplan/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-common.Rmd"}
 ```
 
+* Generate the precinct and ward vote totals from the Mayoral data and other counting questions from CVC/Summer2014/Activities/MinneapolisElectionQuestions.Rmd
+
+* Total land area and population in each state, from the zip-code data.
+
+Case studies: Disasters.  Which forms cause the most damage, greatest loss of life, economic loss.
+
+Medicare spending: see the questions at <file:///Users/kaplan/KaplanFiles/DCF-2014/CaseStudies/MedicareSpending/notes.html>
+
 * Groupwise means and sd.
 * Counts using group_by() and n().  (Group by the levels of the variable to be counted, perhaps including another variable for subdivisions.)
 * Converting counts to proportions. (Divide by sum().)
     ```{r}
     KidsFeet %>% group_by( biggerfoot,sex ) %>% 
-    summarize(count=n() )
+    summarise(count=n() )
     ```
 * Graphics with mPlot(), mBar(), mMap()
 
 * Add a layer to a map, perhaps zip-code population with state boundaries.
 
+* Who votes for whom?  Wade county voters: create cross tabs on registration, etc.  Make bar charts to display patterns.
+
 ## Deconstructing Graphics
 
 Here's a link to a graphic.  You are to include it in your assignment write-up and then provide the answers.  (Remember, you can right-click on the link to get the URL, then paste that into your Rmd document.)
 
-DECONSTRUCTING EXAMPLES
+DECONSTRUCTING EXAMPLES:
+
+See the handout and questions in CVC/Summer2014/Activities/DeconstructingGraphics/
