--- a/Drill/Week-6.Rmd
+++ b/Drill/Week-6.Rmd
@@ -5,8 +5,11 @@ require(dplyr)
 require(ggplot2)
 require(tidyr)
 require(ScoreR)
-startProblem("DCF-Assignment1")
+startProblem("DCF-Assignment6")
 ```
+
+
+## Week 6
 
 ### Multiple Choice
 
