--- a/CourseNotes/DataOrganization/DraftNarrative.Rmd
+++ b/CourseNotes/DataOrganization/DraftNarrative.Rmd
@@ -19,8 +19,8 @@ These notes focus on an organization of data that is simple yet very widely used
 
 <div class="displayAsFigure">
 ```{r echo=FALSE,results="asis"}
-data(babyNames)
-xtable( babyNames[round(seq(700000,1000000,length=7)),] )
+data(BabyNames)
+xtable( BabyNames[round(seq(700000,1000000,length=7)),] )
 ```
 <p class="caption"> A very small subset of a data table showing how many babies were given each name in each year.</p>
 </div>
@@ -28,7 +28,7 @@ xtable( babyNames[round(seq(700000,1000000,length=7)),] )
 <div style="clear:both;"></div> <!-- break between caption and text -->
 
 ```{r eval=FALSE,echo=FALSE}
-babyNames %>% group_by(year,sex) %>% summarise( total=sum( count )) -> foo
+BabyNames %>% group_by(year,sex) %>% summarise( total=sum( count )) -> foo
 ```
 
 For instance, there were 6 boys named Ahmet born in the US in 1986, 19 girls named Sherina in 1970.  Common sense tells you that this is just a small part of the original table.  In fact, the 19 Sharinas are only a small fraction of 1,748,097 girls born in 1970.  In 1986 the Ahmets were just 7 of the 1,839,985 boys. This particular data table covers the years 1880 through 2013 and a total of 333,417,770 babies, somewhat larger than the current population of the US.
@@ -143,11 +143,17 @@ Note that even if the individual identifier in the first column were stripped aw
 
 The "codebook" is a document --- separate from the data table --- that describes various aspects of how the data were collected, what the variables mean and what the different levels of categorical variables refer to.  The word "codebook" comes from the days when data was encoded for the computer in ways that make it hard for a human to read.  
 
-For data provided by R packages, a codebook is available via the `help()` function, e.g., for the `babyNames` data in the `DCFdevel` package, try:
+For data provided by R packages, a codebook is available via the `help()` function, e.g., for the `BabyNames` data in the `DCFdevel` package, try:
 ```{r eval=FALSE}
-help( babyNames )
+help( BabyNames )
 ```
 
 For the runners data, the codebook would tell you that the meaning of the `gun` variable is the time from when the start gun went off to when the runner crosses the finish line and that the unit of measurement is "minutes."  It would also state the obvious: that `age` is the person's age in years and `sex` has two levels, male and female, represented by M and F.^[Such codes are not always self evident to the reader.  In Welsh, the codes might be B for females and G for males.  Not "boy" and "girl" but "Gwryw" for female and "Benyw" for male.  A non-Welsh speaker would easily be confused without the codebook.]
 
 An example of a complicated codebook of the sort sometimes found in the tabulation of government or social science data, is [this document](http://www.icpsr.umich.edu/cgi-bin/file?comp=none&study=27643&ds=1&file_id=1008871&path=NACJD) describing data from the Uniform Crime Reporting Data from the US Department of Justice.  You generally need a lot of knowledge about the specific field to make sense of such things.
+
+<!-- KEEP THIS AT THE BOTTOM -->
+
+```{r child="../../CSS/DisqusTemplate.Rmd"}
+```
+
